chart/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: db
    name: db
spec:
    replicas: 1
    selector:
        matchLabels:
            app: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: db
        spec:
            containers:
                - args:
                      - --default-authentication-plugin=mysql_native_password
                      - --character-set-server=utf8
                      - --collation-server=utf8_general_ci
                  image: mysql:5.7
                  name: db
                  ports:
                      - containerPort: 3306
                  volumeMounts:
                      - mountPath: /var/lib/mysql
                        name: db-data
            restartPolicy: Always
            volumes:
                - name: db-data
                  persistentVolumeClaim:
                      claimName: db-data
