chart/templates/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: web-deny-backend
spec:
    podSelector:
        matchLabels:
            app: backend
    ingress: []
